Remove legacy Data Credit page.

--- a/docs/network-iot/lorawan-roaming-on-helium.mdx
+++ b/docs/network-iot/lorawan-roaming-on-helium.mdx
@@ -57,7 +57,7 @@ Helium Roaming supports the following actions for devices:
 
 - [LoRaWAN on Helium](/lorawan-on-helium) - The Helium Network's approach to LoRaWAN
 - [Helium LoRaWAN: Public Infrastructure with Private Network Servers](https://blog.helium.com/helium-lorawan-public-infrastructure-with-ultimate-privacy-9132560e4ae6)
-- [Helium Network Data Credits](/use-the-network/console/data-credits/) - The financial mechanism
-  for purchasing packets from the Helium Network
+- [Helium Network Data Credits](/helium-tokens/data-credit) - The financial mechanism for purchasing
+  packets from the Helium Network
 - [Packet Purchasing](/blockchain/packet-purchasing) - An explanation of how packet purchasing is
   implemented on the Helium Network
