--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -160,9 +160,9 @@ At this point 2 things can happen:
       [see LoraWan spec for more info](https://lora-alliance.org/resource_hub/lorawan-specification-v1-0-3/)
       ). This is essentially a conflict with **happy path**.
    2. If Router does not deem offers associated with `Device9` worthy of purchasing (e.g. maybe
-      `Device9` was de-activated by user in Console, or maybe `Device9`'s Console Organisation ran
-      out of [Data Credit](/use-the-network/console/data-credits/)) the offer will be rejected and
-      data never delivered. This is a conflict with **non-happy path**.
+      `Device9` was de-activated by a user in Console, or maybe `Device9`'s Console Organisation ran
+      out of [Data Credit](/helium-tokens/data-credit)) the offer will be rejected and data never
+      delivered. This is a conflict with **non-happy path**.
 
 The non-happy path is fairly rare as Router will do its best to find out the right device but this
 is where buying extra `DeviceAddr` can help prevent bad conflicts.
