--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -51,21 +51,21 @@ given message, the cost would be 3 DC.
   <table className="dc-calc-table" style={{ marginBottom: '1em' }}>
     <thead>
       <tr>
-        <th>1 DC</th>
-        <th>2 DC</th>
-        <th>... 11 DC</th>
+        <th>0-24 bytes</th>
+        <th>25-48 bytes</th>
+        <th>... 241 bytes</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>0-24 bytes</td>
-        <td>25-48 bytes</td>
-        <td>... 241 bytes</td>
+        <td>1 DC</td>
+        <td>2 DC</td>
+        <td>... 11 DC</td>
       </tr>
     </tbody>
   </table>
   <figcaption>
-    Data Credits are accounted for in 24-byte increments on the LoRaWAN network.
+    Data transfer is accounted for in 24-byte increments per message on the LoRaWAN network.
   </figcaption>
 </figure>
 <br />
