--- a/docs/api/home.mdx
+++ b/docs/api/home.mdx
@@ -15,8 +15,8 @@ The Helium Network currently exposes the following APIs:
 
 All other data can be accessed through [Oracles](/oracles/).
 
-Note: the free to use Foundation Console [console.helium.com](https://console.helium.com) does not
+Note: the free-to-use Foundation Console [console.helium.com](https://console.helium.com) does not
 support the Console API.
 
-Console providors that do support the Console API are found at
-[Console Hosting Providers](/use-the-network/console/hosting-providers)
+Console providers that support the Console API are listed at
+[Console Hosting Providers](/use-the-network/console/hosting-providers).
