--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -17,24 +17,24 @@ and its associated subDAOs infrastructure. Chief among these changes is moving a
 has previously been "on-chain" (namely PoC data) "off-chain".
 
 As such, this migration introduces several Oracles which serve as bridges between the external world
-and the blockchain. These infrastructure changes will allow the Helium Network to effectively
-introduce new Networks as Decentralized Network Protocol (DNP) subDAOs and more easily scale
-existing DNP subDAOs by removing existing bottlenecks.
+and the blockchain. These infrastructure changes allow the Helium Network to effectively
+introduce new Networks as Decentralized Network Protocol (DNP) subDAOs, and more easily scale
+existing DNP subDAOs (e.g., IOT) by removing existing bottlenecks.
 
-With the deprecation of the Helium L1, changes to [API](/api/) and
+With the deprecation of the Helium L1, changes to the [API](/api/) and
 [ETL](https://github.com/helium/blockchain-etl) include:
 
-1. Existing ETL codebase: will no longer sync blocks.
-2. Existing API codebase: will no longer serve new data.
-3. api.helium.io (built on top of existing etl and api): will stay serving old data.
-4. explorer-old.helium.com (built on top of api.helium.io and other apis): will have data from the
+1. Existing ETL codebase will no longer sync blocks.
+2. Existing API codebase will no longer serve new data.
+3. api.helium.io (built on top of existing ETL and API) will stay serving old data.
+4. explorer-old.helium.com (built on top of api.helium.io and other APIs) will have data from the
    old chain and be migrated to explorer-old.helium.com.
 
-What is new includes:
+New API access options include:
 
-1. New datasets are available and will continue to be available on [AWS S3](/oracles/oracle-data)
-2. Sample API code has been published
-   [here](https://github.com/dewi-alliance/oracle-observer-sample).
+1. New datasets are available and will continue to be available on [AWS S3, via compressed Protobuf files](/oracles/oracle-data).
+2. Sample API code has been published in the 
+   [Oracles S3 Observer Sample App](https://github.com/dewi-alliance/oracle-observer-sample). It uses AWS Lambda to ingest the S3 files to a PostgreSQL database and serve them as JSON via an API.
 3. Third parties are working on new APIs and services to replace existing tools
-   ([Hotspotty](https://hotspotty.net/api/),
+   (e.g., [Hotspotty](https://hotspotty.net/api/),
    [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html), Relay, etc.).
