Typos, grammar, and wording clarification.

--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -12,9 +12,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/community/community.png')} />
 
-The Helium Community is the home to over tens of thousands developers and network operators who
-collaborate every day across the world to build the Helium Network. Any and all are welcome to take
-part. Join us!
+The Helium Community is the home to tens of thousands of developers and network operators who
+collaborate every day across the world to build the Helium Network. All are welcome to take part.
+Join us!
 
 ---
 
@@ -35,22 +35,22 @@ The Helium Community uses a governance mechanism called **Helium Improvement Pro
 approve/reject new changes to major elements of the network like the core protocol, token economics,
 and even network governance itself.
 
-In the earliest phases it's best to vet an idea with the Helium community
+In the earliest phases, it's best to vet an idea with the Helium community
 [via Discord](https://discord.gg/helium). This is a good way to see if there is initial support for
 the idea, or if it's been discussed before. The #hip-discussion channel is a great place to
 circulate an early idea.
 
 HIPs are managed entirely from the [HIP GitHub repository](https://github.com/helium/HIP). Specific
 HIP discussion also happens in the `Improvement Proposal` channels of
-[Helium Discord](https://discord.gg/helium). Any and all members of the Helium Community are
-encouraged to create HIPs, and participate in the governance process.
+[Helium Discord](https://discord.gg/helium). All members of the Helium Community are encouraged to
+create HIPs and participate in the governance process.
 
 ---
 
 ## Monthly Community Calls
 
 The Helium Foundation holds monthly [Community Calls](https://helium.foundation/community-call).
-These typically happen on the the **4th Wednesday of each month at 12PM ET**. Each call has an open
+These typically happen on the **4th Wednesday of each month at 12PM ET**. Each call has an open
 agenda, and any community member can join and add items to the agenda to be discussed.
 
 - [Community Call Notes and Agenda](https://helium.foundation/community-call)
