--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 In order to approve or deny changes to the protocol, economics, or governance of the Helium Network;
 The Helium Network leverages on-chain voting which is open to the entire community. This on-chain
-voting is currently facilited through a Realms organization.
+voting is currently facilitated through a Realms organization.
 
 ## Key Terms
 
@@ -29,7 +29,7 @@ voting is currently facilited through a Realms organization.
 
 ## veTokens and Voting
 
-Token holders are able to vote by 'staking' their tokens to the protocol that they are voting for.
+Token holders can vote by 'staking' their tokens to the protocol that they are voting for.
 This mechanism helps to ensure that the voter holds a long-term interest in the success of the
 Helium Network. veTokens come in several forms with specific responsibilities to segments of the
 network.
@@ -41,7 +41,7 @@ MOBILE. Voting on the IOT and MOBILE networks will require veIOT and veMOBILE re
 
 The [Helium DAO](https://realms.heliumvote.com/dao/hnt) and the Helium Network serve as the
 overarching system that enables a multitude of networks (subDAOs) to exist. As such, veHNT's role in
-network governance is of matters affecting the entire network. For example, a proposal affecting HNT
+network governance is in matters affecting the entire network. For example, a proposal affecting HNT
 emissions would be voted on using veHNT.
 
 Additionally, veHNT can be [delegated](/vote-escrow/realms#delegating-stakes) to a subDAO in order
@@ -118,7 +118,7 @@ Sign in to these using the in-app browser from the Helium Wallet App.
 After you have reviewed the proposal, casting your vote is as easy as issuing a Solana transaction
 for "Yes" or "No".
 
-Note: You will need a bit of Sol in order to cast your veTokens for a vote.
+Note: You will need a bit of Sol to cast your veTokens for a vote.
 
 <figure className="screensnippet-wrapper">
   <div style={{ display: 'flex', alignItems: 'center' }}>
@@ -153,7 +153,7 @@ to, a vote can be relinquished and re-voted to apply the new voting power.
 ## Staying Informed
 
 The majority of HIP discussion happens on the [Helium Discord](https://discord.gg/helium). Many HIPs
-get their start in the #hip-discussion channel. Additionally, each HIP under consideration gets it's
+get their start in the #hip-discussion channel. Additionally, each HIP under consideration gets its
 own channel for focused discussion.
 
 When HIPs are open for vote, notifications are sent by the Helium Foundation on Discord, Twitter,
