--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -13,7 +13,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 <img className="docsheader" src={useBaseUrl('img/blockchain/heliumtoken.png')} />
 
 The Helium Token is the native cryptocurrency and protocol token of the Helium Network. Its symbol
-is HNT. Prior to the launch of the Helium Network, there was no premine of HNT. The first HNT was
+is HNT. Before the launch of the Helium Network, there was no pre-mine of HNT. The first HNT was
 produced on July 29th, 2019 on
 [block 93](https://explorer-old.helium.com/txns/sEP-cbb2tvSrfbBleT21yGDNM8FIjNr3UT3k3BeZELw).
 
@@ -44,11 +44,11 @@ plentiful for network needs but also relatively scarce, with a known maximum.
 
 At launch [genesis block](https://explorer-old.helium.com/blocks/1), the Helium Network targeted
 5,000,000 HNT per month. Since the community approval of
-[HIP-20](https://github.com/helium/HIP/issues/73), the Helium Network uses a two year halving
+[HIP-20](https://github.com/helium/HIP/issues/73), the Helium Network uses a two-year halving
 schedule, resulting in a maximum HNT supply of 223,000,000 HNT.
 
 In the below issuance schedule, year 1 starts on **August 1, 2019**. The first halving happened on
-approximately day one of the beginning of year three, **August 1, 2021**.
+day one of year three, **August 1, 2021**.
 
 | Year | HNT at Year Start | Target HNT Emission |
 | :--- | :---------------- | :------------------ |
