--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -45,7 +45,7 @@ open source tooling found in the [Helium GitHub repositories](https://github.com
 
 IOT follows a similar minting schedule to HNT, however at a max supply of 200,000,000,000 (200B).
 
-Year 1 for IOT started August 1st 2022.
+Year 1 for IOT started on August 1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
