--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -47,9 +47,8 @@ the open source tooling found in the [Helium GitHub repositories](https://github
 
 MOBILE follows a similar minting schedule to HNT, however at a max supply of 230,000,000,000 (230B).
 50B MOBILE were pre-mined at the launch of the network and distributed to the network operations
-fund administered by the Helium Foundation. A fraction of this allocation was distributed over the
-course of the genesis period to live Mobile Network Hotspots. Year 1 for MOBILE started August
-1st, 2022.
+fund administered by the Helium Foundation. A fraction of this allocation was distributed throughout
+the genesis period to live Mobile Network Hotspots. Year 1 for MOBILE started on August 1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
@@ -76,5 +75,5 @@ is as follows:
 [^4]: Any MOBILE not rewarded for data transfer is rolled into Proof of Coverage.
 [^5]: Oracles are not rewarded until additional oracle operators deploy services.
 [^6]:
-    50B pre-mine, 60B max emitted in year one. Only 30B actually emitted as no emissions occured
-    between August 2022 and Jan 31st 2023
+    50B pre-mine, 60B max emitted in year one. Only 30B was emitted as no emissions occurred between
+    August 2022 and Jan 31st, 2023
