--- a/docs/network-mobile/mappers.mdx
+++ b/docs/network-mobile/mappers.mdx
@@ -15,7 +15,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 :::tip Coming Soon
 
 The details on how data from Mobile Mappers will be used in rewards calculations are currently in
-development. Check out how MOBILE Mappers will be included in the the MOBILE PoC Roadmap
+development. Check out how MOBILE Mappers will be included in the MOBILE PoC Roadmap
 [here](https://blog.helium.com/mobile-proof-of-coverage-the-road-ahead-73a25601a13d).
 
 :::
