--- a/docs/network-mobile/service-providers.mdx
+++ b/docs/network-mobile/service-providers.mdx
@@ -86,7 +86,7 @@ While the value chain endpoints do not significantly change, participating Servi
 blockchain technology to streamline the coordination of the layers in delivering useful coverage to
 subscribers.
 
-Programmatic economic coordination executed through Smart Contracts replace middle managers
+Programmatic economic coordination executed through Smart Contracts replaces middle managers
 shuffling paper. This efficient model delivers cost savings that can pass directly to end users or
 increase profits.
 
@@ -126,8 +126,8 @@ Network, the more Rewards they can earn.
 What happens with these Rewards is entirely in the hands of Service Providers. They can retain them
 to increase overall profit margins, allocate them to developing innovative new features, or pass
 them on to subscribers to incentivize them to continue using their service or acquire new
-subscribers. Regardless, Service Providers have more autonomy and growth potential than offered in
-the otherwise rigid economic model of the traditional carrier.
+subscribers. Regardless, Service Providers have more autonomy and growth potential than those
+offered in the otherwise rigid economic model of the traditional carrier.
 
 <img className="explorerSidebar img-center" src={useBaseUrl('img/5g-on-helium/reward-flow.png')} />
 
