--- a/docs/oracles/price-oracles.mdx
+++ b/docs/oracles/price-oracles.mdx
@@ -19,7 +19,7 @@ required on-chain as the price is needed to calculate everything from HNT burnin
 :::note The Next Step
 
 On the day of the chain migration, price feeds were not available for all tokens. Once a stable
-price feed is available, community-sourced price feeds can be removed in favor or Pyth.
+price feed is available, community-sourced price feeds can be removed in favor of Pyth.
 
 :::
 
