--- a/docs/solana/migration/console-operator.mdx
+++ b/docs/solana/migration/console-operator.mdx
@@ -11,5 +11,5 @@ slug: /solana/migration/console-operator
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Please be advised that you must upgrade your instance of Helium Console to the latest version to
-ensure continued operation of devices managed by your LNS. Failure to upgrade before the Solana
+ensure the continued operation of devices managed by your LNS. Failure to upgrade before the Solana
 Migration will result in interruptions to packet transfer for your devices.
