--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -71,9 +71,9 @@ As long as HNT is available in your linked account, new stakes can be created by
 
 ### Lockup Period
 
-In order to build a secure voting system, Helium only allows votes from token holders willing to
-align themselves with the long-term health of the Helium Network. This is done by allowing holders
-to receive veHNT in proportion to the amount of time that the tokens are staked for.
+To build a secure voting system, Helium only allows votes from token holders willing to align
+themselves with the long-term health of the Helium Network. This is done by allowing holders to
+receive veHNT in proportion to the amount of time that the tokens are staked for.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/lockup.png')} />
@@ -296,8 +296,8 @@ address for HNT.
 ### Insufficient SOL Balance
 
 Creating new veHNT positions requires more SOL than standard token claims or account-to-account
-transfers. In order to stake your HNT you will need approximately 0.006 SOL in your account in order
-to create the position.
+transfers. To stake your HNT you will need approximately 0.006 SOL in your account to create the
+position.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/lowbalanceerror.png')} style={{ maxHeight: 300 }} />
