--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -72,7 +72,7 @@ veTokens can be managed through [Realms](/vote-escrow/realms) using the in-app b
 - [IOT subDAO on Realms](https://app.realms.today/dao/IOT)
 - [MOBILE subDAO on Realms](https://app.realms.today/dao/MOBILE)
 
-### Impacts to subDAO Rewards
+### Impacts on subDAO Rewards
 
 SubDAO rewards are calculated and paid to the lock-up position each 24hr reward period, at
 approximately 00:30 UTC. Currently, the IOT and MOBILE subDAO each have a 6% token emission pool for
@@ -83,7 +83,7 @@ end of each epoch.
 
 - More veHNT is delegated in the subDAO you delegated to - your treasury gets more HNT.
 - More Hotspot onboarding fees are burned in the subDAO you delegated to.
-- More network data is transferred in the subDAO you delegated to.
+- More network data is transferred within the subDAO you delegated to.
 
 **subDAO rewards may decrease when:**
 
@@ -91,4 +91,4 @@ end of each epoch.
 - More veHNT is delegated to other subDAOs - other treasuries get more HNT.
 - Your delegated veHNT decays over time after you enter cooldown (cliff mode)
 - More Hotspots are online in other subDAOs that have a non-zero onboarding fee.
-- More network data is transferred in other subDAOs.
+- More network data is transferred within other subDAOs.
