--- a/docs/vote-escrow/voting-power.mdx
+++ b/docs/vote-escrow/voting-power.mdx
@@ -11,7 +11,7 @@ slug: /vote-escrow/voting-power
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The Helium Foundation has implemented HIP-70 and migrated our L1 to Solana. Voting on Helium
-Improvement Proposals is performed with vote escrowed tokens.
+Improvement Proposals are performed with vote escrowed tokens.
 
 ## Key Take Aways
 
@@ -50,7 +50,7 @@ to a subDAO will count towards the DAO Utility Score, the `V` value referenced i
 If you lock up your HNT for veHNT, your HNT will become veHNT and remain entirely in your wallet's
 custody. veHNT ownership is represented by a non-transferable Solana NFT held in your wallet. At the
 end of the lock-up period, any received tokens need to be claimed, the position undelegated, and
-then after a close positon action is taken you will receive HNT back to your wallet 1:1 for the HNT
+then after a close position action is taken you will receive HNT back to your wallet 1:1 for the HNT
 you staked.
 
 ### What Is a "Lock-Up" Period?
