--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -15,13 +15,13 @@ low-cost. Solana has a separate token, which is called SOL.
    includes sending tokens, making payments, swapping tokens, minting NFTs, claiming rewards from
    your Hotspots, and all on-chain Helium transactions. Solana’s average transaction fee is 0.000014
    SOL. This is massively cheaper than the Helium L1 blockchain’s fee of $0.35 worth of DC.
-2. Solana stores information, including info about your token balances, NFTs, and anything else, on
-   chain as special "accounts". Storing this information takes up valuable space, so Solana charges
-   a fee called “rent” on these accounts. Each account has a rent fee, so the more accounts you
-   have, the more rent is required. There is typically one account for each token type that you have
-   or want. Closing accounts can return rent to your wallet. Rent for one account is ~0.002 SOL, so
-   it’s also pretty cheap, but more expensive than the transaction fee. In most cases, you get this
-   fee back once you close the corresponding account. (Note: this fee may vary and is more
+2. Solana stores information, including info about your token balances, NFTs, and anything else,
+   on-chain as special "accounts". Storing this information takes up valuable space, so Solana
+   charges a fee called “rent” on these accounts. Each account has a rent fee, so the more accounts
+   you have, the more rent is required. There is typically one account for each token type that you
+   have or want. Closing accounts can return rent to your wallet. Rent for one account is ~0.002
+   SOL, so it’s also pretty cheap, but more expensive than the transaction fee. In most cases, you
+   get this fee back once you close the corresponding account. (Note: this fee may vary and is more
    complicated, but has a current max of ~0.002 SOL.)
 
 If you don’t have enough SOL in your wallet, you will not be able to make transactions or make new
@@ -35,8 +35,8 @@ for 0.02 SOL.
 
 ## Swap Utility
 
-Open this page from within the browser of the Helium Wallet App (Click on Globe icon) to add the SOL
-to your wallet app.
+Open this page from within the browser of the Helium Wallet App (Click on the Globe icon) to add the
+SOL to your wallet app.
 
 import { HntToFeeSol } from '@theme/HntToFeeSol'
 
