--- a/docs/home/home.mdx
+++ b/docs/home/home.mdx
@@ -65,7 +65,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Helium is a global, distributed network of Hotspots that create public, long-range wireless
         coverage for LoRaWAN-enabled IoT devices and cellular devices. LoRaWAN&trade; Hotspots
         produce and are compensated in IOT, the native cryptocurrency of the Helium blockchain. The
-        Helium blockchain is a new, open source, public blockchain created entirely to incentivize
+        Helium blockchain is a new, open-source, public blockchain created entirely to incentivize
         the creation of physical, decentralized wireless networks. Today, the Helium IoT Network,
         and its <a href="https://explorer.helium.com/">hundreds of thousands of Hotspots</a>,
         provide access to the largest LoRaWAN Network in the world.
