--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -24,9 +24,9 @@ the [Helium Program Libraries](https://github.com/helium/helium-program-library)
 ### AWS S3 Bucket
 
 Data is directly accessible from the `foundation-poc-data-requester-pays` bucket in AWS `us-west-2`
-under the top level data category prefixes listed below. All data provided in the S3 bucket is made
+under the top-level data category prefixes listed below. All data provided in the S3 bucket is made
 available on a basis of 'Requestor Pays' meaning you, the requester, will pay for the data transfer
-and API costs incurred from the data requests. 
+and API costs incurred from the data requests.
 
 _For more information on accessing data from a requester pays bucket, refer to
 [Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html)._
@@ -41,7 +41,7 @@ _For more information on accessing data from a requester pays bucket, refer to
 | `foundation-mobile-ingest`        |
 | `foundation-mobile-verified`      |
 
-Under each top level data category prefix, the relating PoC data files are provided in a flattened
+Under each top-level data category prefix, the related PoC data files are provided in a flattened
 structure in the format provided below:
 
 `s3://foundation-poc-data-requester-pays/<top-level-data-category-prefix>/<filename>.gz`
@@ -56,8 +56,8 @@ that AWS will charge you for:
 To that end, keeping data in `us-west-2` and being pragmatic about which AWS S3 access patterns you
 use will greatly reduce your cost burden for accessing the PoC data.
 
-In regard to access patterns, one approach that you can take to minimize the quantity of S3 API
-calls over time - and save money - is to use the `aws s3api list-objects-v2` command and specify the
+Regarding access patterns, one approach that you can take to minimize the quantity of S3 API calls
+over time - and save money - is to use the `aws s3api list-objects-v2` command and specify the
 `--start-after` parameter with the filename of the last file you received, as indicated below:
 
 ```bash
@@ -73,30 +73,30 @@ there, you can iterate over the returned list of files and perform additional S3
 as `aws s3api copy-object` to copy files based on the file list.
 
 The raw PoC data stored in the `foundation-poc-data-requester-pays` bucket is in encoded protobuf
-format in gz compressed files. The table below provides the top level data category prefixes, the
+format in gz compressed files. The table below provides the top-level data category prefixes, the
 file types comprised within each data category prefix, the filename pattern for each file type, and
 provides a link to the corresponding protobuf used to decode the data.
 
-| Category                        | File Type                       | Pattern                                | Protobuf                                                                                                                  |
-| :------------------------------ | :------------------------------ | :------------------------------------- | :------------------------------------------------------------------------------------------------------------------------ |
-| foundation-iot-entropy          | Entropy                         | entropy.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/entropy.proto#L5)               |
-| foundation-iot-ingest           | IotBeaconIngestReport           | iot_beacon_ingest_report.\*            | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83)     |
-| foundation-iot-ingest           | IotWitnessIngestReport          | iot_witness_ingest_report.\*           | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90)     |
-| foundation-iot-packet-ingest    | PacketReport                    | packetreport.\*                        | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/packet_router.proto#L8) |
-| foundation-iot-verified-rewards | IotRewardShare(starting 4/18)   | iot_reward_share.\*                    | [Proto](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_lora.proto#L186)
-| foundation-iot-verified-rewards | IotPoc                          | iot_poc.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162)    |
-| foundation-iot-verified-rewards | IotInvalidBeaconReport          | iot_invalid_beacon.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125)    |
-| foundation-iot-verified-rewards | IotInvalidWitnessReport         | iot_invalid_witness.\*                 | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L133)    |
-| foundation-iot-verified-rewards | GatewayRewardShare              | gateway_reward_share.\*                | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L171)    |
-| foundation-iot-verified-rewards | RewardManifest                  | reward_manifest.\*                     | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)       |
-| foundation-mobile-ingest        | CellHeartbeatIngestReport       | heartbeat_report.\*                    | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L50)   |
-| foundation-mobile-ingest        | CellSpeedtestIngestReport       | speedtest_report.\*                    | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L25)   |
-| foundation-mobile-ingest        | DataTransferSessionIngestReport | data_transfer_session_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L177)  |
-| foundation-mobile-verified      | ValidatedHeartbeat              | validated_heartbeat.\*                 | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L80)   |
-| foundation-mobile-verified      | SpeedtestAvg                    | speedtest_avg.\*                       | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L97)   |
-| foundation-mobile-verified      | RadioRewardShare                | radio_reward_share.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L118)  |
-| foundation-mobile-verified      | MobileRewardShare(starting 4/18)| mobile_reward_share.\*                 | [Proto](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_mobile.proto#L145)  |
-| foundation-mobile-verified      | RewardManifest                  | reward_manifest.\*                     | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)       |
+| Category                        | File Type                        | Pattern                                | Protobuf                                                                                                                  |
+| :------------------------------ | :------------------------------- | :------------------------------------- | :------------------------------------------------------------------------------------------------------------------------ |
+| foundation-iot-entropy          | Entropy                          | entropy.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/entropy.proto#L5)               |
+| foundation-iot-ingest           | IotBeaconIngestReport            | iot_beacon_ingest_report.\*            | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83)     |
+| foundation-iot-ingest           | IotWitnessIngestReport           | iot_witness_ingest_report.\*           | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90)     |
+| foundation-iot-packet-ingest    | PacketReport                     | packetreport.\*                        | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/packet_router.proto#L8) |
+| foundation-iot-verified-rewards | IotRewardShare(starting 4/18)    | iot_reward_share.\*                    | [Proto](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_lora.proto#L186)    |
+| foundation-iot-verified-rewards | IotPoc                           | iot_poc.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162)    |
+| foundation-iot-verified-rewards | IotInvalidBeaconReport           | iot_invalid_beacon.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125)    |
+| foundation-iot-verified-rewards | IotInvalidWitnessReport          | iot_invalid_witness.\*                 | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L133)    |
+| foundation-iot-verified-rewards | GatewayRewardShare               | gateway_reward_share.\*                | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L171)    |
+| foundation-iot-verified-rewards | RewardManifest                   | reward_manifest.\*                     | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)       |
+| foundation-mobile-ingest        | CellHeartbeatIngestReport        | heartbeat_report.\*                    | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L50)   |
+| foundation-mobile-ingest        | CellSpeedtestIngestReport        | speedtest_report.\*                    | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L25)   |
+| foundation-mobile-ingest        | DataTransferSessionIngestReport  | data_transfer_session_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L177)  |
+| foundation-mobile-verified      | ValidatedHeartbeat               | validated_heartbeat.\*                 | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L80)   |
+| foundation-mobile-verified      | SpeedtestAvg                     | speedtest_avg.\*                       | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L97)   |
+| foundation-mobile-verified      | RadioRewardShare                 | radio_reward_share.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L118)  |
+| foundation-mobile-verified      | MobileRewardShare(starting 4/18) | mobile_reward_share.\*                 | [Proto](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_mobile.proto#L145)  |
+| foundation-mobile-verified      | RewardManifest                   | reward_manifest.\*                     | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)       |
 
 ### Arweave
 
@@ -107,14 +107,14 @@ patterns.
 
 ## Reading Bytestream Data
 
-In order to store the massive amount of data generated by the Oracles, the output is stored as
-zipped bytestreams. In order to 'unpack' this data, you'll first need the associated protobuf from
+To store the massive amount of data generated by the Oracles, the output is stored as zipped
+bytestreams. In order to 'unpack' this data, you'll first need the associated protobuf from
 [github.com/helium/proto](https://github.com/helium/proto). You also can use the mappings above to
 find the correct protobuf definition.
 
-Once uncompressed, the file is a series of 4 byte prefix length encoded binary followed by the
+Once uncompressed, the file is a series of 4-byte prefix length encoded binary followed by the
 associated message. More concretely, you'll need to repeatedly read the first 4 bytes and decode
-that as a big endian u32. Then use that u32 number as the number of subsequent bytes to read. Decode
+that as a big-endian u32. Then use that u32 number as the number of subsequent bytes to read. Decode
 those subsequent bytes using the associated proto definition. Repeat this process until you've read
 the entire file.
 
@@ -228,7 +228,7 @@ async fn main() -> Result<()> {
 }
 ```
 
-A more fleshed out example can be found in
+A more fleshed-out example can be found in
 [this sample oracle observer repo](https://github.com/dewi-alliance/oracle-observer-sample/tree/main/oracle-ingestor-lambda).
 
 ## Service Providers
