--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -29,10 +29,9 @@ voting is currently facilitated through a Realms organization.
 
 ## veTokens and Voting
 
-Token holders can vote by 'staking' their tokens to the protocol that they are voting for.
-This mechanism helps to ensure that the voter holds a long-term interest in the success of the
-Helium Network. veTokens come in several forms with specific responsibilities to segments of the
-network.
+Token holders can vote by 'staking' their tokens to the protocol that they are voting for. This
+mechanism helps to ensure that the voter holds a long-term interest in the success of the Helium
+Network. veTokens come in several forms with specific responsibilities to segments of the network.
 
 Each subDAO governs a specific area of the network. Initially, two subDAOs are introduced: IOT and
 MOBILE. Voting on the IOT and MOBILE networks will require veIOT and veMOBILE respectively.
