--- a/docs/network-iot/lorawan-on-helium.mdx
+++ b/docs/network-iot/lorawan-on-helium.mdx
@@ -48,9 +48,9 @@ or read more [here](/iot/open-lns).
 
 :::info
 
-Based on the latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately 5800
-devices, but results still need to be replicated and bracketed. Community members are encouraged to
-run their own benchmarking tests. Instructions
+Based on the latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately
+5800 devices, but results still need to be replicated and bracketed. Community members are
+encouraged to run their own benchmarking tests. Instructions
 [here](/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with
 Linux and Bash command line.
 
