--- a/docs/network-iot/open-lns.mdx
+++ b/docs/network-iot/open-lns.mdx
@@ -100,8 +100,8 @@ Reimagining this landscape of LNS providers offers users a new level of freedom 
 ### What Is The Current Progress And Future Timeline?
 
 Alpha testing began in October 2022. After a successful initial alpha period, a larger group of
-partners in the ecosystem are participating in the ongoing beta test and are seeing positive evidence
-that ABP and Class C devices will be fully functional on the Helium Network.
+partners in the ecosystem are participating in the ongoing beta test and are seeing positive
+evidence that ABP and Class C devices will be fully functional on the Helium Network.
 
 Testing will continue through the start of 2023.
 
