Testdriving plugins. Misc Cleanup (#1324)
* Typos, grammar, and wording clarification.

* Define style via plugin config

* prettier linewraps

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/network-iot/open-lns.mdx
+++ b/docs/network-iot/open-lns.mdx
@@ -41,7 +41,7 @@ complies with the LoRaWAN specification.
 
 ## Network Improvements
 
-Prior to Open LNS, Helium LoRaWAN Network Servers ran on bespoke software especially suited to the
+Before Open LNS, Helium LoRaWAN Network Servers ran on bespoke software especially suited to the
 Helium Blockchain. Through Helium HIP-70, these constraints were removed, allowing for a multitude
 of simplifications and improvements.
 
@@ -100,8 +100,8 @@ Reimagining this landscape of LNS providers offers users a new level of freedom 
 ### What Is The Current Progress And Future Timeline?
 
 Alpha testing began in October 2022. After a successful initial alpha period, a larger group of
-partners in the ecosystem is participating in the ongoing beta test and are seeing positive evidence
-that ABP and Class C devices will be fully functional on the Helium Network.
+partners in the ecosystem are participating in the ongoing beta test and are seeing positive
+evidence that ABP and Class C devices will be fully functional on the Helium Network.
 
 Testing will continue through the start of 2023.
 
