--- a/docs/network-iot/lorawan-on-helium.mdx
+++ b/docs/network-iot/lorawan-on-helium.mdx
@@ -12,9 +12,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/lorawan-on-helium/lorawanheader.png')} />
 
-The LoRaWAN Network on Helium is currently **compatible with LoRaWAN class A devices**. However,
-class C support is coming in Q2 of 2023.
-
 In typical LoRaWAN Networks, a central or regional LNS is managed by a single entity. Helium’s
 design for a decentralized network, however, means not only do we want gateways (referred to as
 Hotspots) to be independently owned and operated, but we want to enable the independent operation of
@@ -28,7 +25,7 @@ this distinguishes Helium’s LoRaWAN Network from any other: public wireless in
 compatible with privately-run network servers.
 
 The rest of this article will discuss the networking primitives. If you want to go ahead and run a
-network server, please checkout our article about
+network server, please check out our article about
 [running a network server](/use-the-network/run-a-network-server).
 
 ## The OUI
@@ -40,7 +37,7 @@ routing objects owned and maintained by the OUI operator:
 - one or more **slabs** of DevAddrs, reserving NwkAddr space for the OUI's devices on the Helium
   Network
 
-A device defined by (AppEui, DevEui) can be allocated any of the DevAddrs owned by the OUI. It is
+A device defined by (AppEui, DevEui) can be allocated to any of the DevAddrs owned by the OUI. It is
 even possible to multiplex many devices on the same DevAddr at the same time, using the Message
 Integrity Check (MIC) to disambiguate.
 
@@ -51,11 +48,11 @@ or read more [here](/iot/open-lns).
 
 :::info
 
-Based on latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately 5800
-devices, but results still need to be replicated and bracketed. Community members are encouraged to
-run their own benchmarking tests. Instructions
+Based on the latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately
+5800 devices, but results still need to be replicated and bracketed. Community members are
+encouraged to run their own benchmarking tests. Instructions
 [here](/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with
-Linux and Bash command-line.
+Linux and Bash command line.
 
 :::
 
@@ -71,19 +68,19 @@ A Join Request frame has the following unencrypted header:
 +---------------------------------------------------------+
 ```
 
-From the gateways perspective, the (AppEUI, DevEUI) may be used to figure out if one or more OUI's
+From the gateway's perspective, the (AppEUI, DevEUI) may be used to figure out if one or more OUI's
 are interested in the Join Request.
 
 This is done by querying every filter maintained and written to the blockchain by every OUI. The
 filters themselves are _xorhash_ tables, thus the AppEui and DevEui cannot be extracted. Only with
-the AppEui and DevEui in-hand can the gateway run it through the table and to see if it's there.
+the AppEui and DevEui in hand can the gateway run it through the table to see if it's there.
 
 In response to the Join Request, a Join Accept is sent down, assigning the NwkAddr. Due to the
 multi-tenancy on the Helium Network, the LNS may only assign NwkAddrs within its DevAddr slab(s).
 
 ### Data Frames and DevAddr Slabs
 
-Data packets have the followed unencrypted header (FHDR):
+Data packets have the following unencrypted header (FHDR):
 
 ```bash
 +----------------------------------------------------------------------+
@@ -106,6 +103,6 @@ Within DevAddr, there is the NwkAddr of a device:
 +-----------+--------------------+---------------+
 ```
 
-From the gateways perspective, it is able to use DevAddr to determine the OUI of Data frames. A
+From the gateway's perspective, it is able to use DevAddr to determine the OUI of Data frames. A
 quick query can say which OUI owns this DevAddr slab. This look-up and routing by DevAddr instead of
 by \(AppEUI, DevEUI\) via _xorhash_ filters is generally much quicker.
