line wrap for bot test

--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -17,9 +17,9 @@ and its associated subDAOs infrastructure. Chief among these changes is moving a
 has previously been "on-chain" (namely PoC data) "off-chain".
 
 As such, this migration introduces several Oracles which serve as bridges between the external world
-and the blockchain. These infrastructure changes allow the Helium Network to effectively
-introduce new Networks as Decentralized Network Protocol (DNP) subDAOs, and more easily scale
-existing DNP subDAOs (e.g., IOT) by removing existing bottlenecks.
+and the blockchain. These infrastructure changes allow the Helium Network to effectively introduce
+new Networks as Decentralized Network Protocol (DNP) subDAOs, and more easily scale existing DNP
+subDAOs (e.g., IOT) by removing existing bottlenecks.
 
 With the deprecation of the Helium L1, changes to the [API](/api/) and
 [ETL](https://github.com/helium/blockchain-etl) include:
