more governance additions

--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -11,12 +11,22 @@ slug: /governance
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/community/community.png')} />
+# Governance
 
-The Helium Community is the home to over tens of thousands developers and network operators who
-collaborate every day across the world to build the Helium Network. Any and all are welcome to take
-part. Join us!
+The Helium Community is the home to hundreds of developers and network operators who
+collaborate every day across the world to build the global decentralized wireless network that is the Helium Network. 
 
-## Discord
+The Helium Community utilizes network-wide, token voting for Governance. The Helium Improvement Proposal, or "HIP", is the core unit of change.
+
+Anyone is welcome and encouraged to write a HIP. HIP Editors are Foundation Employees or Community Volunteers who assist authors with HIP readiness.
+
+All token holders are eligible to vote! To participate in making change to the Helium Network, token holders should stake their tokens in Realms.
+
+Any and all are welcome to shape the future of decentralized wireless. Read on for more information and join us!
+
+## Contribute: 
+
+### Discord
 
 The [Helium Discord](https://discord.gg/helium) is the primary communication channel for the Helium
 Network Community. Here you'll find real-time, in-depth discussion on all parts of the Helium
@@ -24,7 +34,9 @@ Network. It is also the primary venue to get support for using the Network.
 
 - [Join the Helium Community Discord](https://discord.gg/helium)
 
-## Helium Improvement Proposals
+## Propose:
+
+### Helium Improvement Proposals
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as
 "HIPs"). Modeled on BIPs from the Bitcoin community, as well as pulling from influences of open-source development, HIPs are used to introduce, debate, and
@@ -46,7 +58,9 @@ encouraged to create HIPs, and participate in the governance process.
 
 Learn more about HIPs [here]()
 
-## Realms
+## Vote:
+
+### Realms
 
 [Realms] (realms.today) is a Solana native tool for DAO infrastructure. As part of the migration to the Solana Blockchain, the Helium Community adopted Realms as it's tool for staking, delegating and on-chain voting.
 This tool replaces Helium Vote.
@@ -55,7 +69,9 @@ Read [this page](XXX) to learn how to navigate Realms.
 
 - Join the [Helium DAO](www.realms.heliumvote.com/dao/hnt), [IOT DAO](www.realms.heliumvote.com/dao/iot) or [MOBILE DAO](www.realms.heliumvote.com/dao/mobile) on Realms.
 
-## Monthly Community Calls
+## Be In The Know:
+
+### Monthly Community Calls
 
 The Helium Community holds monthly video calls (led by the
 [Helium Foundation](https://www.helium.foundation/)). These typically happen on the the **4th
@@ -63,16 +79,6 @@ Wednesday of each month at 12PM ET**. Each call has an open agenda, and any comm
 join and add items to the agenda to be discussed.
 
 - [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
-- [Video recordings of previous community calls](https://vimeo.com/dewialliance) some are linked in
+- [Video recordings of previous community calls](https://helium.foundation/community-call) are linked in
   the Community Call notes.
 
-## Social Media
-
-Helium is everywhere. Here's the full list:
-
-- [Facebook](https://www.facebook.com/heliumsystems)
-- [Instagram](https://www.instagram.com/helium/)
-- [LinkedIn](https://www.linkedin.com/company/heliuminc/)
-- [Reddit](https://www.reddit.com/r/HeliumNetwork/)
-- [Telegram](https://t.me/helium_network) Currently Read Only
-- [Twitter](https://twitter.com/helium)
