add committee info

--- a/docs/governance/working-groups.mdx
+++ b/docs/governance/working-groups.mdx
@@ -14,11 +14,15 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Working Groups
 
-The Helium Community often establishes Working Groups based on several needs:
+The People’s Network continues to see innovation fueled by community engagement and strong feedback loops. Working Groups are small circles of highly engaged members of the community dedicated to understanding specific aspects of the Helium Network, identifying challenges and opportunities, and advocating a path forward to the larger community based on thoughtful consideration. 
+
+The Helium Community often establishes Working Groups based on several high-level needs:
 1. Research & Development 
 2. Stewardship & Guidance
 
 Working Groups self organize and sunset as needed. They are volunteer based.
+
+You can find more information below about all *active* working groups.
 
 ### IOT PoC Working Group
 
@@ -44,7 +48,13 @@ You can find the MOBILE PoC Working Group Charter [here](https://docs.google.com
 Working Groups are an effective way of creating alignment and advancement on short term needs.  See the list below for some of the Working Groups that have helped shape the development of the network over time:
 1. Readiness Working Group
 2. LoRaWAN Working Group
-
+3. 5G 
+4. Anti-Gaming
+6. Bridges
+7. Municipal
+8. ETL 
+9. Mobile Apps 
+10. Hardware Security 
 
 ## Fishbowl Channels
 
