--- a/docs/governance/committees.mdx
+++ b/docs/governance/committees.mdx
@@ -13,3 +13,18 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 <img className="docsheader" src={useBaseUrl('img/community/community.png')} />
 
 ## Committees
+
+Committees are a necessary part of performing key operations, regulating standards, and coming to consensus on changes to the Network.
+
+Committees are often established through HIPs or out of rough consensus from a common sense need. 
+
+Today, the Helium Community utilizes one Committee, the Manufacturing Compliance Committee. 
+
+### Manufacturing Compliance Committee (MCC)
+
+**Origin:** The MCC was was established by [HIP 19](https://github.com/helium/HIP/blob/main/0019-third-party-manufacturers.md).
+
+**Purpose:** The MCC sets basic technical, security, and ethical standards & verifies that these standards are met by manufacturers joining the Helium Network through the HIP19 process.
+
+You can find more information about the MCC, Ethics for Makers/Manufacturers, and more [here](https://heliumfoundation.notion.site/Manufacturing-Compliance-Committee-ee3c98a602af4eb79c0d016b0d92b194).
+
