update realms page

--- a/docs/governance/realms.mdx
+++ b/docs/governance/realms.mdx
@@ -28,8 +28,8 @@ All veHNT holders are able to vote by issuing a small SOL token transaction from
 
 <!-- ## How to Vote on Realms -->
 
-The first thing you need to do is ensure that you have a Solana ready wallet that is funded with some SOL and HNT. 
-Once you have that ready navigate to the Helium DAO, IOT DAO or MOBILE DAO at https://app.realms.today/. 
-There you should be met with a screen that looks similar to this one.
+The first thing you need to do is ensure that you have a Solana ready wallet that is funded with some SOL and one of the network tokes: HNT, IOT, or MOBILE. 
+Once you have that ready navigate to the Helium DAO, IOT subDAO or MOBILE subDAO at https://app.realms.today/. 
+There you should be met with a screen that looks similar to this one:
 
 [image]
