Revert frequency pllan Australia

--- a/docs/network-iot/frequency-plans/region-plans.mdx
+++ b/docs/network-iot/frequency-plans/region-plans.mdx
@@ -48,7 +48,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Argentina               | AU915_SB1      |
 | Armenia                 | EU868          |
 | Aruba                   | Unknown        |
-| Australia               | AS923_1        |
+| Australia               | AU915_SB2        |
 | Austria                 | EU868          |
 | Azerbaijan              | EU433          |
 
@@ -92,8 +92,8 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Chad                     | Unknown        |
 | Chile                    | AU915_SB1      |
 | China                    | CN470          |
-| Christmas Island         | AS923_1        |
-| Cocos [Keeling] Islands  | AS923_1        |
+| Christmas Island         | AU915_SB2        |
+| Cocos [Keeling] Islands  | AU915_SB2        |
 | Colombia                 | AU915_SB1      |
 | Comoros                  | EU868          |
 | Congo [DRC]              | Unknown        |
@@ -169,7 +169,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Country                           | Frequency Plan |
 | --------------------------------- | -------------- |
 | Haiti                             | Unknown        |
-| Heard Island and McDonald Islands | AS923_1        |
+| Heard Island and McDonald Islands | AU915_SB2        |
 | Honduras                          | AU915_SB1      |
 | Hong Kong                         | AS923_1        |
 | Hungary                           | EU868          |
@@ -265,7 +265,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Niger                    | IN865          |
 | Nigeria                  | EU868          |
 | Niue                     | AS923_1        |
-| Norfolk Island           | AS923_1        |
+| Norfolk Island           | AU915_SB2        |
 | North Korea              | Unknown        |
 | Northern Mariana Islands | US915          |
 | Norway                   | EU868          |
