--- a/docs/faq/style-guide.mdx
+++ b/docs/faq/style-guide.mdx
@@ -3,9 +3,10 @@ id: style-guide
 title: Docs Style Guide
 pagination_label: Docs Style Guide
 sidebar_label: Docs Style Guide
-description: Helium Documentation <!-- do not change -->
-image: https://docs.helium.com/img/link-image.png <!-- do not change -->
+description: Helium Documentation
+image: https://docs.helium.com/img/link-image.png
 slug: /style-guide
+draft: true
 ---
 
 You can write content using [GitHub-flavored Markdown syntax](https://github.github.com/gfm/).
@@ -92,7 +93,9 @@ Reference-style: ![alt text][logo]
 Images from any folder can be used by providing path to file. Path should be relative to markdown
 file.
 
+```markdown
 ![img](../static/img/icons/logo.svg)
+```
 
 ---
 
@@ -178,35 +181,45 @@ it's a separate line in the _same paragraph_.
 
 ## Admonitions
 
+```markdown
 :::note
 
 This is a note
 
 :::
+```
 
+```markdown
 :::tip
 
 This is a tip
 
 :::
+```
 
+```markdown
 :::important
 
 This is important
 
 :::
+```
 
+```markdown
 :::caution
 
 This is a caution
 
 :::
+```
 
+```markdown
 :::warning
 
 This is a warning
 
 :::
+```
 
 ## Linking to Other Docs
 
